--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,16 @@
 .footer {
     background-color: #75A9FA;
 }
+
+.card {
+    display: flex;  
+    justify-content: center;  
+    align-items: center;  
+    text-align:left;
+}
+
+.card-img-top {
+    width: 225px; 
+    height: 225px;
+}
+
